--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -6,22 +6,40 @@ body {
 .card {
   width: 400px;
   background: #fff;
-  margin: 16px auto;
+  margin: 8px auto;
+  padding: 8px;
 }
 
 .title {
   background: #e3f4ff;
+  font-size: 16px;
+  padding: 8px;
+  margin: 8px;
 }
 
 .content {
   background: #e3f4ff;
+  margin: 16px 8px;
+  padding: 10px;
 }
 
 .button-container {
   background: #e3f4ff;
+  display: block;
+  padding: 8px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  margin: 8px 8px 8px 8px;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  padding: 8px 24px;
+  display: block;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+  margin-left: -80px;
 }
